<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <!-- TITLE -->
        <TextView
            android:text="@string/workspace_title"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- BUTTONS -->


        <Button
            android:id="@+id/btnPendingRequests"
            android:text="@string/view_pending_requests"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="#000000"
            android:layout_marginBottom="15dp"/>


        <Button
            android:id="@+id/btnApprovalHistory"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/view_approval_history"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="#000000"
            android:layout_marginBottom="12dp"/>




        <Button
            android:id="@+id/btnLabAdmins"
            android:text="@string/lab_admins"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="#000000"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/btnLabDetails"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/lab_details"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:backgroundTint="#000000"
            android:layout_marginBottom="12dp"/>

    </LinearLayout>
</ScrollView>